...
        set { self[TsumibenReduceMotionOverrideKey.self] = newValue }
    }
}

enum LocalPreviewLaunchPolicy {
#if DEBUG
    static let environmentKey = "TSUMIBEN_LOCAL_PREVIEW"
    static let uiTestEnvironmentKey = "TSUMIBEN_UI_TEST_MODE"
    static let persistentUITestStoreEnvironmentKey = "TSUMIBEN_UI_TEST_PERSISTENT_STORE"
    static let accessibility5EnvironmentKey = "TSUMIBEN_UI_TEST_AX5"
    static let reduceMotionEnvironmentKey = "TSUMIBEN_UI_TEST_REDUCE_MOTION"
    static let unselectedRareRewardUITestEnvironmentKey = "TSUMIBEN_UI_TEST_RARE_REWARD_UNSELECTED"
    static let rareRewardOnboardingUITestEnvironmentKey = "TSUMIBEN_UI_TEST_RARE_REWARD_ONBOARDING"
#else
...
